# spanish-words-to-number

./: .gitignore  LICENSE  README.MD  example.py  pyproject.toml  requirements.txt  setup.py
src/spanish_words_to_number/: __init__.py  __main__.py  spanish_words_to_number.py
tests/: test_spanish_words_to_number.py
